# uav_waypoint_tracking_sim

./: .gitignore  README.md
SAM6_250217/: README.md
SAM6_250217/SAM6/: Makefile  SAM6
SAM6_250217/SAM6/data/: SAM_aero_deck.asc  SAM_traj_deck.asc  SRBM_aero_deck.asc  SRBM_traj_deck_ballistic.asc
SAM6_250217/SAM6/doc/: documentation.asc  (+1 more)
docs/: gimbal_target_tracking.md  hardware_parameters.md  runbook.md  visual_pursuit_interception.md
px4_overlays/airframes/: 4019_gz_x500_gimbal
px4_overlays/worlds/: trajectory_tracking.sdf  waypoint_tracking.sdf
scripts/: build.sh  render_trajectory_world.py  render_waypoint_world.py  set_wind.sh  start_agent.sh  start_px4_gazebo.sh  start_rviz.sh  start_target_px4_gazebo.sh  start_target_trajectory_tracking.sh  start_target_waypoint_tracking.sh  start_trajectory_tracking.sh  start_visual_interception.sh  start_waypoint_tracking.sh  watch_wind.sh
src/uav_trajectory_tracking/: package.xml  setup.cfg  setup.py
src/uav_waypoint_tracking/: package.xml  setup.cfg  setup.py
src/uav_waypoint_tracking/config/: gimbal_tracking.yaml  target_waypoints.yaml  waypoints.yaml  wind.yaml  yolo_tracking.yaml
src/uav_waypoint_tracking/config/wind_profiles/: calm.yaml  steady_east_3ms.yaml
src/uav_waypoint_tracking/launch/: waypoint_tracking.launch.py
src/uav_waypoint_tracking/rviz/: waypoint_tracking.rviz
src/uav_waypoint_tracking/uav_waypoint_tracking/: gimbal_performance_monitor.py  gimbal_target_tracker.py  trajectory_logger.py  waypoint_tracker.py  waypoint_visualizer.py  yolo_annotator.py  yolo_detector.py  yolo_tracker.py
(+64 files in other folders)
